# github-coderabbit-comment-gettter

./: .env.example  .github_rate_limit_cache.json  .gitignore  .pre-commit-config.yaml  AI_AGENT_QUICK_REFERENCE.md  AUTO_RESOLVE_USAGE.md  CLAUDE.md  CODERABBIT_ENHANCED_USAGE.md  COMMENT_REPLY_USAGE.md  CONTINUOUS_IMPROVEMENT_ROADMAP.md  FEEDBACK_COLLECTION_GUIDE.md  GITHUB_API_ISSUES_AND_WORKAROUNDS.md  GIT_HOOKS_GUIDE.md  GRP_USAGE.md  IMPROVEMENT_RESULTS_REPORT.md  MANIFEST.in  MASTER_ISSUE_UPDATE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  RELEASE_NOTES_v2.0.0.md  REVIEW.md  SAFE_PYTEST_EXECUTION_GUIDE.md  SIMPLE_USAGE.md  UVX_USAGE.md  analyze_outside_diff.py  check_review_threads.json  create_improvement_issues.py  extract_section_boundaries.py  github-review-prompts.sample.yml  github_comments.py  github_comments_simple.py  github_review_prompts.py  github_review_prompts_clean.py  graphql_query.json  memory_monitor.py  outside_diff_structure.txt  pr12_graphql_response.json  pr12_outside_diff_full.txt  production_validation_test.py  pyproject.toml  (+22 more)
.cursor/: mcp.json
.github-review-resolutions/: .gitignore  README.md
.kiro/specs/github-review-prompts-ai-agent/: design.md  design_ja.md  requirements.md  requirements_ja.md  tasks.md  tasks_ja.md
examples/: batch-replies-sample.json  test-comment-reply.py
scripts/: batch_reply.sh  check_env.sh  setup-git-hooks.sh  verify_replies.sh
src/: grp_uvx.py
src/github_review_prompts/: __init__.py  __main__.py  auto_resolve_cli.py  auto_resolve_processor.py  cli.py  coderabbit_review_prompt.md  coderabbit_review_prompt_v2.md  comment_processor.py  comment_reply_cli.py  comment_thread_processor.py  config.py  curl_reply.py  github_client.py  main.py  models.py  output_formatter.py  prompt_generator.py  unified_cli.py
src/github_review_prompts/core/: __init__.py  prompt_engine.py
src/github_review_prompts/tests/: conftest.py  test_authentication_security.py  test_coderabbit_filter.py  test_coderabbit_filtering.py  test_comment_thread_processor.py  test_github_api_integration.py  test_grp_command_line_arguments.py  test_large_comment_handling.py  test_outside_diff_parser.py  test_parsers.py  test_pr_url_parsing.py  test_real_pr_processing.py  test_resolved_comment_handling.py  test_terraform_pr_102.py
src/github_review_prompts/utils/: __init__.py  ai_agent_optimizer.py  ai_response_analyzer.py  coderabbit_enhanced_system.py  database_tracker.py  duplicate_manager.py  enhanced_config.py  enhanced_github_manager.py  github_integration.py  outside_diff_parser.py  parsers.py  platform_detector.py  priority_classifier.py  production_monitor.py  progress_tracker.py  rate_limit_handler.py  reply_decision_matrix.py  resolution_detector.py  resolution_master.py  resolution_storage.py  smart_batch_reply_manager.py  smart_comment_filter.py  thread_context_analyzer.py  usage_metrics.py  validators.py
