[project]
name = "github-coderabbit-comment"
version = "0.1.0"
description = "GitHubプルリクエストのインラインコメントを取得するツール"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.8"

[project.scripts]
gh-comments = "github_comments:main"
gh-comments-simple = "github_comments_simple:main"
gh-review-prompts = "github_review_prompts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
